--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,16 +8,31 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/judul"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:orientation="horizontal"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:fontFamily="@font/advent_pro"
-        android:text="PSDKUBEM-VOTE"
-        android:textSize="20dp" />
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="20dp">
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/logopens"/>
+        <TextView
+            android:layout_marginLeft="5dp"
+            android:layout_gravity="center"
+            android:id="@+id/judul"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/advent_pro"
+            android:textStyle="bold"
+            android:text="PSDKUBEM-VOTE"
+            android:textSize="20dp" />
+
+
+    </LinearLayout>
 
 
     <LinearLayout
@@ -39,9 +54,12 @@
                 android:layout_marginRight="10dp"
                 android:layout_width="match_parent"
                 android:layout_weight="1"
-                android:layout_height="230dp">
+                android:layout_height="230dp"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground">
 
                 <LinearLayout
+                    android:id="@+id/menuVoting"
                     android:background="#ffeeef"
                     android:orientation="vertical"
                     android:layout_width="match_parent"
@@ -98,7 +116,7 @@
                         android:layout_height="wrap_content"
                         android:text="Result"
                         android:textSize="18dp"
-                        android:fontFamily="@font/roboto"
+                        android:fontFamily="@font/alegreya_sans"
                         android:textColor="@color/colorBlack"
                         android:textAlignment="center" />
 
@@ -127,7 +145,7 @@
                 android:layout_height="230dp">
 
                 <LinearLayout
-                    android:background="#f7f5ff"
+                    android:background="#FDF5FF"
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -147,7 +165,8 @@
                         android:layout_alignParentBottom="true"
                         android:textSize="18dp"
                         android:textColor="@color/colorBlack"
-                        android:text="Profile Calon"/>
+                        android:text="Profile Calon"
+                        android:fontFamily="@font/alegreya_sans"/>
 
                 </LinearLayout>
 
@@ -183,7 +202,8 @@
                         android:text="Procedures"
                         android:textSize="18dp"
                         android:textColor="@color/colorBlack"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:fontFamily="@font/alegreya_sans"/>
 
                 </LinearLayout>
 
