--- a/app/src/main/res/layout/activity_prosedures.xml
+++ b/app/src/main/res/layout/activity_prosedures.xml
@@ -4,12 +4,12 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ProfileActivity">
+    tools:context=".activity.ProceduresActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Layout Profile Calon"
+        android:text="Activity Procedures"
         android:padding="20dp"/>
 
 </LinearLayout>
