--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,6 @@
             android:text="PSDKUBEM-VOTE"
             android:textSize="20dp" />
 
-
     </LinearLayout>
 
 
@@ -117,6 +116,7 @@
                         android:src="@drawable/resultvote"/>
 
                     <TextView
+                        android:id="@+id/namaMenuResult"
                         android:layout_marginTop="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -168,6 +168,7 @@
                         android:src="@drawable/profilcalon"/>
 
                     <TextView
+                        android:id="@+id/namaMenuProfile"
                         android:layout_marginTop="10dp"
                         android:textAlignment="center"
                         android:layout_width="match_parent"
@@ -208,6 +209,7 @@
                         android:src="@drawable/tatacara"/>
 
                     <TextView
+                        android:id="@+id/namaMenuProsedure"
                         android:layout_marginTop="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
